fix(portal): wrap long strings in Table of Contents to prevent floating
(cherry picked from commit d93a682a3757be9f3c049fbb1c25afc4db094539)

--- a/gravitee-apim-portal-webui/src/app/components/gv-page-markdown/gv-page-markdown.component.css
+++ b/gravitee-apim-portal-webui/src/app/components/gv-page-markdown/gv-page-markdown.component.css
@@ -53,6 +53,12 @@
   overflow-wrap: break-word;
   white-space: pre-wrap;
 }
+:host ::ng-deep .toc-link {
+  display: block !important;
+  max-width: 100% !important;
+  white-space: normal !important;
+  word-break: break-word !important;
+}
 
 app-gv-markdown-toc {
   position: fixed;
